# bieterverfahren

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
bieterverfahren/: db.sqlite3  manage.py
bieterverfahren/bieterverfahren/: admin.py  asgi.py  bidding_process_api.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
bieterverfahren/bieterverfahren/migrations/: 0001_initial.py  0002_initial.py  0003_biddingprocess_invited_bidders.py
bieterverfahren/templates/: base.html  bidders_list.html  bidding.html  bidding_process_detail.html  landingpage.html  permission_denied.html
bieterverfahren/templates/email/: bidding_process_invitation.html
bieterverfahren/theme/static_src/: package-lock.json
