[tool.poetry]
name = "bieterverfahren"
version = "0.1.0"
description = "Starter Template for Python projects"
readme = "README.md"
homepage = "https://github.com/om-proptech/bieterverfahren"
repository = "https://github.com/om-proptech/bieterverfahren"
authors = ["Hendrik Richter <richter@om-proptech.de>"]
packages = [
    { include = "bieterverfahren" }
]
license = "Proprietary"
classifiers = [
    "Intended Audience :: Developers",
"Private :: Do Not Upload",
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "~3.11"
django = "^4.1.5"
django-tailwind = "^3.4.0"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"
black = "^22.10.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"
import-linter = "^1.4.0"
mkdocs-material = "^8.5.7"
mkdocstrings = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
source = ["tests", "bieterverfahren"]
